# streaq

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  example.py  pyproject.toml  test.py  tmp.py
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: python-app.yml  python-publish-test.yml  python-publish.yml
benchmarks/: README.md  bench_arq.py  bench_saq.py  bench_streaq.py  bench_taskiq.py
docs/: cli.rst  conf.py  contributing.rst  getting-started.rst  index.rst  installation.rst  integrations.rst  middleware.rst  streaq.rst  task.rst  worker.rst
docs/api/: task.rst  types.rst  utils.rst  worker.rst
streaq/: __init__.py  __main__.py  cli.py  constants.py  lua.py  task.py  types.py  utils.py  worker.py
streaq/lua/: create_groups.lua  fail_dependents.lua  publish_delayed_tasks.lua  publish_task.lua  read_streams.lua  streaq.lua  update_dependents.lua
streaq/ui/: __init__.py  context.py  deps.py  queues.py  tasks.py
streaq/ui/templates/: base.j2  cron.j2  queue.j2  table.j2  task.j2  workers.j2
streaq/web/: __init__.py  htmx.py
streaq/web/templates/: base.html  index.html  queue.html
tests/: conftest.py  failure.py  test_cli.py  test_task.py  test_utils.py  test_web.py  test_worker.py
