[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "streaq/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["benchmarks"]

[tool.hatch.build.targets.wheel]
exclude = ["benchmarks"]

[project]
name = "streaq"
description = "Fast, async, type-safe job queuing with Redis streams"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    { name = "Graeme Holliday", email = "graeme@tastyware.dev" }
]
dependencies = [
    "crontab>=1.0.1",
    "redis[hiredis]>=5.2.1",
    "typer>=0.15.2",
    "watchfiles>=1.0.4",
]
dynamic = ["version"]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.7",
    "jinja2>=3.1.5",
    "uvicorn>=0.34.0",
]
benchmark = [
    "arq",
    "saq[hiredis]>=0.22.2",
]

[project.scripts]
streaq = "streaq.__main__:cli"

[dependency-groups]
dev = [
    "enum-tools[sphinx]>=0.12.0",
    "httpx>=0.28.1",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.3",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "testcontainers[redis]>=4.9.1",
]

[tool.setuptools.package-data]
"streaq" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["streaq"]

[tool.ruff.lint]
ignore = [
    "E731",  # lambda-assignment
]

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv.sources]
arq = { git = "https://github.com/graeme22/arq" }
