[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "streaq/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["benchmarks"]

[tool.hatch.build.targets.wheel]
exclude = ["benchmarks"]

[project]
name = "streaq"
description = "Fast, async, type-safe job queuing with Redis streams"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Framework :: Django",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Clustering",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    { name = "Graeme Holliday", email = "graeme@tastyware.dev" }
]
dependencies = [
    "anyio>=4.8.0",
    "crontab>=1.0.1",
    "redis[hiredis]>=5.2.1",
    "typer>=0.15.2",
    "watchfiles>=1.0.4",
]
dynamic = ["version"]

[project.optional-dependencies]
benchmark = [
    "arq==0.26.3",
    "saq[hiredis]==0.22.2",
    "taskiq-redis==1.0.3",
]

[project.scripts]
streaq = "streaq.__main__:cli"

[project.urls]
Homepage = "https://github.com/tastyware/streaq"
Documentation = "https://streaq.rtfd.io"
Funding = "https://github.com/sponsors/tastyware"
Source = "https://github.com/tastyware/streaq"
Changelog = "https://github.com/tastyware/streaq/releases"

[dependency-groups]
dev = [
    "enum-tools[sphinx]>=0.12.0",
    "httpx>=0.28.1",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.3",
    "sphinx>=8.1.3",
    "sphinx-immaterial>=0.13.5",
    "testcontainers[redis]>=4.9.1",
]

[tool.setuptools.package-data]
"streaq" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["streaq"]

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv.sources]
arq = { git = "https://github.com/graeme22/arq" }
