[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "streaq/__init__.py"

[tool.hatch.build.targets.wheel]
include = ["streaq/**/*"]
exclude = ["**/__pycache__/**"]

[tool.hatch.build.targets.sdist]
include = ["streaq/**/*"]
exclude = ["**/__pycache__/**"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "streaq"
description = "Fast, async, fully-typed distributed task queue via Redis streams"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Framework :: Django",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Framework :: Trio",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Clustering",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    { name = "Graeme Holliday", email = "graeme@tastyware.dev" }
]
dependencies = [
    "anyio>=4.12.1",
    "coredis==6.0.0rc2",
    "crontab>=1.0.5",
    "typer>=0.19.2",
    "uvloop>=0.21.0; sys_platform != 'win32'",
    "watchfiles>=1.1.0",
]
dynamic = ["version"]

[project.optional-dependencies]
web = [
    "fastapi>=0.117.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
    "uvicorn>=0.37.0",
]

[project.scripts]
streaq = "streaq.__main__:cli"

[project.urls]
Homepage = "https://github.com/tastyware/streaq"
Documentation = "https://streaq.rtfd.io"
Funding = "https://github.com/sponsors/tastyware"
Source = "https://github.com/tastyware/streaq"
Changelog = "https://github.com/tastyware/streaq/releases"

[dependency-groups]
dev = [
    "enum-tools[sphinx]>=0.13.0",
    "httpx>=0.28.1",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.13.1",
    "sphinx>=8.1.3",
    "sphinx-immaterial>=0.13.6",
    "trio>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
strict = ["streaq/"]

[tool.coverage.run]
source = ["streaq"]
concurrency = ["multiprocessing", "thread"]
sigterm = true
patch = ["subprocess"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.coverage.paths]
streaq = ["streaq", "/app/streaq"]
